# photonmapper

./: CMakeLists.txt  caustic.txt  functions.h  input.txt  makescene.cpp  map.cpp  map.h  notes.cpp  photon.cpp  photon.h  photonmapper.cpp  photonmapper.h  profiler.cpp  raytracer.cpp  raytracer.h  raytracerCopy.cpp  raytracerCopy.h  rectangle.cpp  room.txt  view.h
data/: CMakeLists.txt
geom/: .functions.h.swp  .material.h.swp  .ray.h.swp  .scene.h.swo  .scene.h.swp  CMakeLists.txt  common.cpp  common.h  functions.h  light.cpp  light.h  material.cpp  material.h  photon.cpp  photon.h  ray.cpp  ray.h  rectangle.h  scene.cpp  scene.h  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
kdtree/: .example.cpp.swp  CMakeLists.txt  Makefile  cmake_install.cmake  feature_vector.cpp  kd-tree_sse_24d.h  makescene
parse/: .glm.cpp.swp  CMakeLists.txt
png/: CMakeLists.txt  rgbColor.h  rgbImage.cpp  rgbImage.h
